--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Unity WebGL Player | TestWebGL</title>
   </head>
   <body style="text-align: center; padding: 0; border: 0; margin: 0;">
-    <canvas id="unity-canvas" width=1080 height=1920 tabindex="-1" style="width: 1080px; height: 1920px; background: #231F20"></canvas>
-    <script src="Build/Build.loader.js"></script>
+    <canvas id="unity-canvas" width=500 height=900 tabindex="-1" style="width: 500px; height: 900px; background: #231F20"></canvas>
+    <script src="Build/2TestWebGL.loader.js"></script>
     <script>
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
         // Mobile device style: fill the whole browser client area with the game canvas:
@@ -25,9 +25,9 @@
       }
 
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/Build.data",
-        frameworkUrl: "Build/Build.framework.js",
-        codeUrl: "Build/Build.wasm",
+        dataUrl: "Build/2TestWebGL.data",
+        frameworkUrl: "Build/2TestWebGL.framework.js",
+        codeUrl: "Build/2TestWebGL.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "TestWebGL",
